// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTransactions Renders correctly and does not load transactions if the user has not signed in 1`] = `
<tmpage-stub
  data-title="Transactions"
  hideheader="true"
  loaded="true"
  managed="true"
  signinrequired="true"
  subtitle=""
  title=""
>
  <dataemptytx-stub />
   
  <template>
    <div
      infinite-scroll-distance="80"
    >
      <transactionlist-stub
        transactions="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        validators="[object Object]"
      />
    </div>
     
    <br />
  </template>
</tmpage-stub>
`;

exports[`PageTransactions Renders correctly and loads transactions 1`] = `
<tmpage-stub
  data-title="Transactions"
  hideheader="true"
  loaded="true"
  managed="true"
  signinrequired="true"
  subtitle=""
  title=""
>
  <dataemptytx-stub />
   
  <template>
    <div
      infinite-scroll-distance="80"
    >
      <transactionlist-stub
        address="cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9"
        transactions="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        validators="[object Object]"
      />
    </div>
     
    <br />
  </template>
</tmpage-stub>
`;
